# qxw

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  prompts.txt  pyproject.toml
docs/: development.md  faq.md  operations.md  planning.md  quick-start.md  user-guide.md
qxw/: __init__.py
qxw/config/: init.py  setting.json.example  settings.py
skills/: README.md
skills/qxw/: SKILL.md
skills/qxw-git/: SKILL.md
skills/qxw-image/: SKILL.md
skills/qxw-llm/: SKILL.md
skills/qxw-markdown/: SKILL.md
skills/qxw-math/: SKILL.md
skills/qxw-serve/: SKILL.md
skills/qxw-str/: SKILL.md
tests/: __init__.py  conftest.py  test_auto_enhance.py  test_bin_git_cmd.py  test_bin_image.py  test_bin_llm.py  test_bin_markdown.py  test_bin_math.py  test_bin_serve.py  test_chat_provider_manager.py  test_chat_service.py  test_color_filters.py  test_commands.py  test_completion.py  test_cover_service.py  test_exceptions.py  test_git_archive_service.py  test_hello.py  test_image_adjust.py  test_image_cli_change.py  test_image_service.py  test_image_service_auto_enhance.py  test_init.py  test_llm_fetch_service.py  test_logger.py  test_markdown_service.py  test_math_service.py  test_models_base.py  test_sbdqf.py  test_serve_file.py  test_serve_gitbook.py  test_serve_image.py  test_serve_webtool.py  test_settings.py  test_str_cmd.py  test_summary_service.py
