[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qxw"
version = "0.1.0"
description = "QXW 通用开发命令行工具集合"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "QXW Team"},
]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "textual>=0.40.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
qxw = "qxw.bin.commands:main"
qxw-hello = "qxw.bin.hello:main"
qxw-sbdqf = "qxw.bin.sbdqf:main"
qxw-chat = "qxw.bin.chat:main"
qxw-chat-provider = "qxw.bin.chat_provider:main"

[tool.setuptools.packages.find]
include = ["qxw*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
