[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qxw"
version = "0.1.0"
description = "QXW 通用开发命令行工具集合"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "QXW Team"},
]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "textual>=0.40.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "markdown>=3.5.0",
    "cryptography>=41.0.0",
    "Pillow>=10.0.0",
    "rawpy>=0.20.0",
    "cairosvg>=2.7.0",
    "google-genai>=0.3.0",
    "huggingface-hub>=0.20.0",
    "modelscope>=1.10.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=60.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
qxw = "qxw.bin.commands:main"
qxw-llm = "qxw.bin.llm:main"
qxw-serve = "qxw.bin.serve:main"
qxw-image = "qxw.bin.image:main"
qxw-markdown = "qxw.bin.markdown:main"
qxw-str = "qxw.bin.str_cmd:main"
qxw-math = "qxw.bin.math:main"
qxw-git = "qxw.bin.git_cmd:main"

[tool.setuptools.packages.find]
include = ["qxw*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
